@@ -28,7 +28,7 @@
                 <property name="shadow_type">in</property>
                 <property name="min_content_height">199</property>
                 <child>
-                  <object class="GtkTreeView" id="folder_tree_view">
+                  <object class="GtkTreeView" id="folders_tree_view">
                     <property name="height_request">190</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
@@ -74,7 +74,7 @@
                 <property name="can_focus">False</property>
                 <property name="layout_style">start</property>
                 <child>
-                  <object class="GtkButton" id="button1">
+                  <object class="GtkButton" id="folders_add">
                     <property name="label">gtk-add</property>
                     <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
@@ -90,7 +90,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="button2">
+                  <object class="GtkButton" id="folders_remove">
                     <property name="label">gtk-remove</property>
                     <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
